# tdd-python

./: Makefile  pyproject.toml
src/: bank.py  dollar.py  exchanger.py  expression.py  franc.py  money.py  sum.py
tests/: money_test.py
