[tool.poetry]
name = "tdd-python"
version = "0.1.0"
description = ""
authors = ["ac2393921 <ac2393921@gmail.com>"]
readme = "README.md"
packages = [{include = "tdd_python"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.3"
black = "^22.8.0"
flake8 = "^5.0.4"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
